# python-proxy-headers

./: .cursorrules  .gitignore  IMPLEMENTATION_PRIORITY.md  LIBRARY_RESEARCH.md  OUTREACH_DRAFTS.md  README.md  pyproject.toml  test_proxy_headers.py
.agents/skills/python-proxy-headers/: SKILL.md
.cursor/skills/release/: SKILL.md
.github/: dependabot.yml
.github/workflows/: github_release_on_release_branch_merge.yml  proxy_integration_tests.yml  publish.yml
docs/: aiohttp.rst  autoscraper.rst  cloudscraper.rst  conf.py  httpx.rst  index.rst  pycurl.rst  requests.rst  urllib3.rst
python_proxy_headers/: adapter.py  autoscraper_proxy.py  cloudscraper_proxy.py  httpx_proxy.py  pycurl_proxy.py  urllib3_proxy_manager.py
