[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-proxy-headers"
version = "0.2.1"
authors = [
  { name="ProxyMesh", email="support@proxymesh.com" },
]
description = "Handle custom proxy headers for http & https requests in various python libraries"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
	"License :: OSI Approved :: MIT License",
	"Intended Audience :: Developers",
	"Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/proxymesh/python-proxy-headers"
Changelog = "https://github.com/proxymesh/python-proxy-headers/commits/main/"
Issues = "https://github.com/proxymesh/python-proxy-headers/issues"
Documentation = "https://python-proxy-headers.readthedocs.io/en/latest/"
ProxyMesh = "https://proxymesh.com"
